--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
 		"url": "http://mattpatenaude.com"
 	},
 	"main": "./lib/schedule.js",
+	"scripts": {
+		"test": "./node_modules/.bin/nodeunit test"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mattpat/node-schedule.git"
+	},
+	"devDependencies": {
+		"nodeunit": "~0.8.1"
 	}
 }
