--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"type": "git",
 		"url": "https://github.com/mattpat/node-schedule.git"
 	},
+    "dependencies": {
+        "long-timeout": "~0.0.1"
+    },
 	"devDependencies": {
 		"nodeunit": "~0.8.1"
 	}
