--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
 		"type": "git",
 		"url": "https://github.com/mattpat/node-schedule.git"
 	},
+
+	"dependencies": {
+		"cron-parser": "~0.3.0"
+	},
 	"devDependencies": {
 		"nodeunit": "~0.8.1"
 	}
