--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-schedule",
-  "version": "0.1.15555  "description": "A cron-like and not-cron-like job scheduler for Node.",
+  "version": "0.1.15"
+  "description": "A cron-like and not-cron-like job scheduler for Node.",
   "keywords": ["schedule", "task", "job", "cron"],
   "author": {
     "name": "Matt Patenaude",
