--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,9 @@
   },
   "rules": {
     "eqeqeq": [2, "smart"],
-    "curly": [2, "multi-line"],
+    "indent": [2, 2],
     "no-constant-condition": false,
     "no-redeclare": 1,
-    "no-shadow": 1,
     "no-underscore-dangle": false,
     "no-use-before-define": [true,"nofunc"],
     "quotes": [2, "single"],
