--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "compile": "npm run clean && ./node_modules/.bin/babel src --out-dir lib",
     "prepublish": "npm run compile",
     "test": "npm run compile && ./node_modules/.bin/nodeunit test",
-    "lint": "./node_modules/.bin/eslint src",
+    "lint": "./node_modules/.bin/babel-eslint src",
     "clean": "rm -rf lib"
   },
   "author": {
