--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "compile": "npm run clean && ./node_modules/.bin/babel src --out-dir lib",
     "prepublish": "npm run compile",
     "test": "npm run compile && ./node_modules/.bin/nodeunit test",
-    "lint": "./node_modules/.bin/babel-eslint src",
+    "lint": "./node_modules/.bin/eslint src",
     "clean": "rm -rf lib"
   },
   "author": {
@@ -33,6 +33,7 @@
     "babel": "^4.7.16",
     "babel-eslint": "^2.0.2",
     "coveralls": "^2.11.2",
+    "eslint": "^0.17.1",
     "istanbul": "^0.3.8",
     "nodeunit": "^0.9.1",
     "sinon": "^1.14.1"
