--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "cron-parser": "0.6.1",
-    "long-timeout": "0.0.2"
+    "long-timeout": "0.0.2",
+    "time": "^0.11.2"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
