Revert "Merge pull request #137 from santigimeno/tz"
- Remove timezone functionality.
- This reverts commit 03a2dfbf1f21ab33a423418d7a6fd5625dadf22e,
  reversing changes made to fae30c0782935bf82e674b9b785a98628ef4d736.

--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   },
   "dependencies": {
     "cron-parser": "0.6.1",
-    "long-timeout": "0.0.2",
-    "time": "^0.11.2"
+    "long-timeout": "0.0.2"
   },
   "devDependencies": {
     "babel": "^5.4.7",
