--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,4 @@ node_js:
   - "4"
   - "5"
 before_script: npm run lint
-script: ./node_modules/.bin/istanbul cover ./node_modules/.bin/nodeunit test
-        && cat ./coverage/lcov.info
-        | ./node_modules/.bin/coveralls && rm -rf ./coverage
-        && npm run lint
+script: ./node_modules/.bin/istanbul cover ./node_modules/.bin/nodeunit test && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls && rm -rf ./coverage
