--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-schedule-tz",
-  "version": "1.2.1",
+  "version": "1.2.1-2",
   "description": "A cron-like and not-cron-like job scheduler with timezone support for Node.",
   "keywords": [
     "schedule",
