fix: lint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,18 @@
 {
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
   "env": {
     "node": true,
     "es6": true
   },
   "rules": {
     "eqeqeq": ["error", "smart"],
-    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "indent": ["error", 2, {"SwitchCase": 1}],
     "no-constant-condition": "off",
     "no-redeclare": "warn",
     "no-underscore-dangle": "off",
-    "no-use-before-define": ["warn","nofunc"],
+    "no-use-before-define": ["warn", "nofunc"],
     "quotes": ["error", "single"],
     "space-before-blocks": "error",
     "strict": "error"
