Fix linting error

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "nodeunit",
     "test:coverage": "istanbul cover ./node_modules/.bin/nodeunit test",
     "test:coverage-win": "istanbul cover ./node_modules/nodeunit/bin/nodeunit test",
-    "lint": "eslint lib test"
+    "lint": "eslint lib test",
+    "lint:fix": "eslint --fix lib test"
   },
   "author": {
     "name": "Matt Patenaude",
