--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "./lib/schedule.js",
   "scripts": {
     "test": "nodeunit",
+    "test:tape": "tape test/*.spec.js",
     "coveralls": "nyc report --reporter=lcov",
     "test:coverage": "nyc nodeunit test",
     "lint": "eslint lib test",
@@ -42,7 +43,8 @@
     "eslint": "^7.18.0",
     "nodeunit": "~0.11.3",
     "nyc": "^15.1.0",
-    "sinon": "^2.4.1"
+    "sinon": "^2.4.1",
+    "tape": "^5.1.1"
   },
   "engines": {
     "node": ">=6"
