--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "cron-parser": "^3.1.0",
     "long-timeout": "0.1.1",
-    "sorted-array-functions": "^1.3.0"
+    "sorted-array-functions": "^1.3.0",
+    "rrule": "2.6.4"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
