Execute airtap tests on a headless Chromium

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "./lib/schedule.js",
   "scripts": {
     "test": "tape test/*.js",
-    "test:browser": "airtap test/*.js",
+    "test:browser": "airtap test/cancel-long-running-jobs.js test/convenience-method-test.js test/date-convenience-methods-test.js test/range-test.js test/recurrence-rule-test.js test/schedule-cron-jobs.js test/start-end-test.js",
     "coveralls": "nyc report --reporter=lcov",
     "test:coverage": "nyc tape test/*.js",
     "lint": "eslint lib test",
@@ -41,8 +41,10 @@
   },
   "devDependencies": {
     "airtap": "^4.0.1",
+    "airtap-playwright": "^1.0.1",
     "eslint": "^7.18.0",
     "nyc": "^15.1.0",
+    "playwright": "^1.8.0",
     "sinon": "^9.2.4",
     "tape": "^5.1.1"
   },
