Try to fix older node support

--- a/.github/workflows/browser.yml
+++ b/.github/workflows/browser.yml
@@ -27,6 +27,11 @@ jobs:
       - name: Install
         run: |
           npm install
+
+      - name: Install playwright
+        run: |
+          npm install playwright airtap-playwright
+
       - name: Run Tests
         run: |
           npm run test:browser
