--- a/package.json
+++ b/package.json
@@ -44,15 +44,21 @@
     "long-timeout": "0.1.1",
     "sorted-array-functions": "^1.3.0"
   },
-  "optionalDependencies": {
+  "peerDependencies": {
     "rrule": "2.6.4"
+  },
+  "peerDependenciesMeta": {
+    "rrule": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "airtap": "^4.0.1",
     "eslint": "^7.18.0",
     "nyc": "^15.1.0",
     "sinon": "^9.2.4",
-    "tape": "^5.1.1"
+    "tape": "^5.1.1",
+    "rrule": "2.6.4"
   },
   "engines": {
     "node": ">=6"
