--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "build": "tsc",
     "test": "ts-node --project test/tsconfig.json node_modules/tape/bin/tape test/*.ts",
     "test:browser": "airtap test/cancel-long-running-jobs.js test/convenience-method-test.js test/date-convenience-methods-test.js test/range-test.js test/recurrence-rule-test.js test/schedule-cron-jobs.js test/start-end-test.js",
-    "coveralls": "nyc report --reporter=lcov",
-    "test:coverage": "nyc tape test/*.js",
-    "lint": "eslint lib test",
-    "lint:fix": "eslint --fix lib test"
+    "coveralls": "ts-node --project test/tsconfig.json node_modules/nyc/bin/nyc.js report --reporter=lcov",
+    "test:coverage": "ts-node --project test/tsconfig.json node_modules/nyc/bin/nyc.js tape test/*.js",
+    "lint": "eslint --ext ts lib test",
+    "lint:fix": "eslint --fix --ext ts lib test"
   },
   "author": {
     "name": "Matt Patenaude",
@@ -48,6 +48,8 @@
     "@types/sinon": "^9.0.10",
     "@types/sorted-array-functions": "^1.3.0",
     "@types/tape": "^4.13.0",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "airtap": "^4.0.1",
     "eslint": "^7.18.0",
     "nyc": "^15.1.0",
